[FEAT] add meal new endpoint and fix cp endpoint
